<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">
    <!-- Logo with Radius -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dawak_ic"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_medium"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"

        android:text="@string/emp_guardian"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/about_us_text"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/cairo_medium"/>
</LinearLayout>
